--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,6 +16,7 @@
 - enhancement: new format parameter: redo-thread
 - enhancement: changed config field content for "scn-type", removed "timestamp-all" and added new field "timestamp-type"
 - enhancement: new format parameter: "user-type"
+- fix: multitenant db: transaction shared among PDBs causes replication to freeze
 
 1.9.0
 - code style cleanup
